--- a/src/app/airexport/airexport/airexport-edit/airexport-edit.component.html
+++ b/src/app/airexport/airexport/airexport-edit/airexport-edit.component.html
@@ -56,10 +56,12 @@
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm" for="">Frt.Status</label>
+              <label class="col-sm-4 form-label form-lable-sm">Carrier</label>
               <div class="col-sm-8">
-                <app-combobox [dataSource]="dataList" [valueColumn]="'key'" [displayColumn]="'value'"
-                  formControlName="mbl_frt_status_name"></app-combobox>
+                <auto-complete formControlName="mbl_liner_name" name="mbl_liner_name" id="mbl_liner_name"
+                  (CallBack)="callBack($event)" table="param" subtable="SEA CARRIER" [company_id]="getCompanyId()"
+                  [url]="url" case="upper"
+                  display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
               </div>
             </div>
             <div class="form-group row">
@@ -100,12 +102,10 @@
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm">Carrier</label>
+              <label class="col-sm-4 form-label form-lable-sm" for="">Frt.Status</label>
               <div class="col-sm-8">
-                <auto-complete formControlName="mbl_liner_name" name="mbl_liner_name" id="mbl_liner_name"
-                  (CallBack)="callBack($event)" table="param" subtable="SEA CARRIER" [company_id]="getCompanyId()"
-                  [url]="url" case="upper"
-                  display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
+                <app-combobox [dataSource]="dataList" [valueColumn]="'key'" [displayColumn]="'value'"
+                  formControlName="mbl_frt_status_name"></app-combobox>
               </div>
             </div>
             <div class="form-group row">
@@ -164,7 +164,7 @@
             </div>
             <div class="form-group row">
               <label class="col-sm-4 form-label form-lable-sm">Currency</label>
-              <div class="col-sm-3">
+              <div class="col-sm-8">
                 <auto-complete formControlName="mbl_currency_code" name="mbl_currency_code" id="mbl_currency_code"
                   (CallBack)="callBack($event)" table="param" subtable="CURRENCY" [company_id]="getCompanyId()"
                   [url]="url" case="upper"
@@ -173,14 +173,16 @@
             </div>
             <div class="form-group row">
               <label class="col-sm-4 form-label form-lable-sm">Handled By</label>
-              <div class="col-sm-3">
+              <div class="col-sm-8">
                 <auto-complete formControlName="mbl_handled_name" name="mbl_handled_name" id="mbl_handled_name"
                   (CallBack)="callBack($event)" table="param" subtable="SALESMAN" [company_id]="getCompanyId()"
                   [url]="url" case="upper"
                   display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
               </div>
-              <label class="col-sm-2 form-label form-lable-sm">Salesman</label>
-              <div class="col-sm-3">
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm">Salesman</label>
+              <div class="col-sm-8">
                 <auto-complete formControlName="mbl_salesman_name" name="mbl_salesman_name" id="mbl_salesman_name"
                   (CallBack)="callBack($event)" table="param" subtable="SALESMAN" [company_id]="getCompanyId()"
                   [url]="url" case="upper"
