--- a/src/app/airimport/airimport/airimport-edit/airimport-edit.component.html
+++ b/src/app/airimport/airimport/airimport-edit/airimport-edit.component.html
@@ -18,7 +18,7 @@
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm" for="">Date</label>
+              <label class="col-sm-4 form-label form-lable-sm" for="">Ref Date</label>
               <div class="col-sm-8">
                 <app-date formControlName="mbl_ref_date" [format]="gs.globalConstants.global_date_format"
                   [placeholder]="gs.globalConstants.global_date_format"></app-date>
