--- a/src/app/seaexport/seaexporth/seaexporth-edit/seaexporth-edit.component.html
+++ b/src/app/seaexport/seaexporth/seaexporth-edit/seaexporth-edit.component.html
@@ -32,11 +32,8 @@
             <div class="form-group row">
               <label class="col-sm-4 form-label form-lable-sm" for="">Stage</label>
               <div class="col-sm-8">
-                <auto-complete formControlName="hbl_shipment_stage_name" id="hbl_shipment_stage_name"
-                  (CallBack)="callBack($event)" [table]="'param'" [subtable]="'shipstage oe'"
-                  [company_id]="getCompanyId()" [url]="url" 
-                  display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]" >
-                 </auto-complete>
+                <app-input maxlength="60" formControlName="hbl_shipment_stage_name" [case]="'UPPER'" id="hbl_shipment_stage_name"
+                    name="hbl_shipment_stage_name" [disable]="true"></app-input>
               </div>
             </div>
           </div>
