--- a/src/app/seaimport/seaimporth/seaimporth-edit/seaimporth-edit.component.html
+++ b/src/app/seaimport/seaimporth/seaimporth-edit/seaimporth-edit.component.html
@@ -464,9 +464,9 @@
           <div class="col-sm-6">
             <div class="form-group row">
               <label class="col-sm-4 form-label form-lable-sm" for="">Telex Released</label>
-              <div class="col-sm-3">
+              <div class="col-sm-8">
                 <auto-complete formControlName="hbl_telex_released_name" id="hbl_telex_released_name"
-                  (CallBack)="callBack($event)" [table]="'param'" [subtable]="'PAID_STATUS'" [company_id]="getCompanyId()" [url]="url"
+                  (CallBack)="callBack($event)" [table]="'param'" [subtable]="'TELEX-RELEASE'" [company_id]="getCompanyId()" [url]="url"
                   display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
               </div>
               <!-- <div class="col-sm-8">
