--- a/src/app/seaimport/seaimportm/seaimportm-edit/seaimportm-edit.component.html
+++ b/src/app/seaimport/seaimportm/seaimportm-edit/seaimportm-edit.component.html
@@ -460,7 +460,7 @@
                     <label>{{iRow.get('hbl_id')?.value}}</label>
                   </td>
                   <td align="centre" [routerLink]="['/seaimport/seaimporthEdit']"
-                    [queryParams]="{ id: iRow.get('hbl_id')?.value, mbl_id: mform.get('mbl_id')?.value, mode: 'edit',menuid:'SEA-EXPORT-H', type: 'SEA-EXPORT-H', appid: appid }"
+                    [queryParams]="{ id: iRow.get('hbl_id')?.value, mbl_id: mform.get('mbl_id')?.value, mode: 'edit',menuid:'SEA-IMPORT-H', type: 'SEA-IMPORT-H', appid: appid }"
                     class="link"> 
                     <i class="fa fa-pencil"></i>
                   </td>
