--- a/src/app/seaexport/seaexportm/seaexportm-edit/seaexportm-edit.component.html
+++ b/src/app/seaexport/seaexportm/seaexportm-edit/seaexportm-edit.component.html
@@ -444,7 +444,8 @@
           </div>
           <div class="form-group row">
             <div class="col-sm-12">
-              <button class="btn btn-sm btn-success w-100 mb-2">INTERNAL MEMO</button>
+              <button class="btn btn-sm btn-success w-100 mb-2" routerLink="/memo/memoEdit"
+              [queryParams]="{ id:0, parent_id: mform.get('mbl_id')?.value,parent_type:'SEAEXP-CNTR-MEMO', mode: 'add',menuid:'MEMO', type: 'MEMO', appid: appid}">INTERNAL MEMO</button>
             </div>
           </div>
           <div class="form-group row">
