--- a/src/app/seaimport/seaimporth/seaimporth-edit/seaimporth-edit.component.html
+++ b/src/app/seaimport/seaimporth/seaimporth-edit/seaimporth-edit.component.html
@@ -1112,7 +1112,8 @@
           </div>
           <div class="form-group row">
             <div class="col-sm-12">
-              <button class="btn btn-sm btn-success w-100 mb-2">HOUSE INTERNAL MEMO</button>
+              <button class="btn btn-sm btn-success w-100 mb-2" routerLink="/memo/memoEdit"
+                [queryParams]="{ id:0, parent_id: mform.get('hbl_id')?.value,parent_type:'SEAIMP-SHIP-MEMO', mode: 'add',menuid:'MEMO', type: 'MEMO', appid: appid }">HOUSE INTERNAL MEMO</button>
             </div>
           </div>
           <div class="form-group row">
